# secnix

./: .gitignore  Cargo.toml  README.md  flake.nix  secnix.nix
modules/: home.nix
src/: cli.rs  fs.rs  main.rs  main2.rs  manifest.rs  sops.rs  ssh.rs
src/enc/: age.rs  mod.rs
