[package]
name = "secnix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
age = { version = "0.10.0", features = ["ssh", "armor"] }
anyhow = "1.0.86"
base64 = "0.22.1"
cipher = "0.4.4"
regex = "1.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
