[package]
name = "secnix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
age = { version = "0.10.0", features = ["ssh", "armor"] }
anyhow = "1.0.86"
base64 = "0.22.1"
bech32 = "0.11.0"
cipher = "0.4.4"
clap = { version = "4.5.15", features = ["derive"] }
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
regex = "1.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
shellexpand = "3.1.0"
ssh-key = { version = "0.6.6", features = ["ed25519"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = "1.1.3"
users = "0.11.0"
x25519-dalek = "2.0.1"
